--- a/artificial-intelligence/ai-rag-indexer/api-reference/api.yml
+++ b/artificial-intelligence/ai-rag-indexer/api-reference/api.yml
@@ -80,7 +80,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_resp_common'
       description: |-
-        Returns list of fields that can be used to create embeddings for RAG search.
+        Returns a list of fields that can be used to create embeddings for RAG search.
       security:
         - OAuth2:
             - ai.agent_read
@@ -120,7 +120,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_resp_common'
       description: |-
-        Retrieves list of fields which can be used for vector search filtering. Filtering is applied before RAG retrieval stage.
+        Retrieves alist of fields which can be used for vector search filtering. Filtering is applied before RAG retrieval stage.
       security:
         - OAuth2:
             - ai.agent_read
@@ -142,7 +142,7 @@ components:
           description: Description of the field.
         type:
           type: string
-          description: Type of the field
+          description: Type of the field.
           enum:
             - string
             - integer
